baseline picture db entry

--- a/client-app/src/app/flower-list/flower-list.component.html
+++ b/client-app/src/app/flower-list/flower-list.component.html
@@ -1,3 +1,10 @@
-<p>
-  This will be a list of all the flowers in the garden.
-</p>
+<div class="container">
+	<p>
+	  This will be a list of all the flowers in the garden.
+	</p>
+	<button type="button" (click)="addDummyFlower()" class="btn btn-primary">Add person</button>
+
+  <div class="row" *ngFor="let flower of flowers">
+    <app-flower [flower]="flower"></app-flower>
+  </div>
+</div>
