--- a/client-app/src/app/navigation/navigation.component.html
+++ b/client-app/src/app/navigation/navigation.component.html
@@ -1,5 +1,10 @@
-<span>
-  <a routerLink="/homepage">Home</a>
-  <a routerLink="/flowers">Flowers</a>
-  <a routerLink="/posts">Posts</a>
-</span>
+<nav class="navbar navbar-light bg-faded">
+  <div class="container">
+    <a class="navbar-brand" href="#">Garden App</a>
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" routerLink="/homepage">Home</a>
+      <a class="nav-item nav-link" routerLink="/flowers">Flowers</a>
+      <a class="nav-item nav-link" routerLink="/posts">Posts</a>
+    </div>
+  </div>
+</nav>
