--- a/client-app/src/app/flower/flower.component.html
+++ b/client-app/src/app/flower/flower.component.html
@@ -1,3 +1,8 @@
-<p>
-  This component will show an individual flower.
-</p>
+<div class="card">
+  <div class="card-block">
+    <h4 class="card-title">{{flower.common_name}}</h4>
+    <p class="card-text">Scientific Name: {{flower.sci_name}}</p>
+    <a href={{flower.wiki_link}} class="card-link">Wiki Link</a>
+    <a href="#" class="card-link">Another link</a>
+  </div>
+</div>
