--- a/client-app/src/app/homepage/homepage.component.html
+++ b/client-app/src/app/homepage/homepage.component.html
@@ -2,5 +2,5 @@
 	<p>
 	  This is the homepage for the Garden app
 	</p>
-	<app-image-uploader></app-image-uploader>
+	<app-gridfs-upload></app-gridfs-upload>
 </div>
