simplified image upload, added classified image list, removed fake posts

--- a/client-app/src/app/homepage/homepage.component.html
+++ b/client-app/src/app/homepage/homepage.component.html
@@ -2,5 +2,6 @@
 	<p>
 	  This is the homepage for the Garden app
 	</p>
-	<app-gridfs-upload></app-gridfs-upload>
+	<app-image-uploader></app-image-uploader>
+	<app-classified-images-list></app-classified-images-list>
 </div>
