--- a/client-app/src/app/classified-image/classified-image.component.html
+++ b/client-app/src/app/classified-image/classified-image.component.html
@@ -1,5 +1,6 @@
 <div class="card">
   <div class="card-block">
     <h4 class="card-title">{{image.image_name}}</h4>
+    <img [src]="image.image_path">
   </div>
 </div>
