dynamic upload list

--- a/client-app/src/app/classified-images-list/classified-images-list.component.html
+++ b/client-app/src/app/classified-images-list/classified-images-list.component.html
@@ -3,7 +3,7 @@
     Classified images list
   </p>
   
-  <div class="row" *ngFor="let image of classifiedImages">
+  <div class="row" *ngFor="let image of classifiedImages | async">
     <app-classified-image [image]="image"></app-classified-image>
   </div>
 </div>
