refactor image classify and upload, added error handling to upload and classify, removed ng2-file-upload, added new image uploader

--- a/client-app/src/app/classified-image/classified-image.component.html
+++ b/client-app/src/app/classified-image/classified-image.component.html
@@ -2,5 +2,8 @@
   <div class="card-block">
     <h4 class="card-title">{{image.image_name}}</h4>
     <img [src]="image.image_path">
+    <div *ngFor="let prediction of image.predictions">
+    	<li>{{prediction.model_version}}</li>
+    </div>
   </div>
 </div>
