--- a/client-app/src/app/homepage/homepage.component.html
+++ b/client-app/src/app/homepage/homepage.component.html
@@ -2,6 +2,6 @@
 	<p>
 	  This is the homepage for the Garden app
 	</p>
-	<app-image-uploader></app-image-uploader>
+	<app-image-upload></app-image-upload>
 	<app-classified-images-list></app-classified-images-list>
 </div>
