initial working ts backend based on https://github.com/ErickWendel/Learning.NodeJSWithTypescript.git

--- a/client-app/src/app/flower-list/flower-list.component.html
+++ b/client-app/src/app/flower-list/flower-list.component.html
@@ -2,7 +2,7 @@
 	<p>
 	  This will be a list of all the flowers in the garden.
 	</p>
-	<button type="button" (click)="addDummyFlower()" class="btn btn-primary">Add person</button>
+	<button type="button" (click)="addDummyFlower()" class="btn btn-primary">Add dummy flower</button>
 
   <div class="row" *ngFor="let flower of flowers">
     <app-flower [flower]="flower"></app-flower>
