--- a/client-app/src/app/classified-image/classified-image.component.html
+++ b/client-app/src/app/classified-image/classified-image.component.html
@@ -1,7 +1,7 @@
 <div class="card">
   <div class="card-block">
     <h4 class="card-title">{{image.image_name}}</h4>
-    <img [src]="image.image_path">
+    <img [src]="imageSrc(image._id)">
     <div *ngFor="let prediction of image.predictions">
     	<li>{{prediction.model_version}}</li>
     </div>
