--- a/client-app/src/app/classified-image/classified-image.component.html
+++ b/client-app/src/app/classified-image/classified-image.component.html
@@ -2,8 +2,10 @@
   <div class="card-block">
     <h4 class="card-title">{{image.image_name}}</h4>
     <img [src]="imageSrc(image._id)">
+    <div>Date uploaded {{image.date_uploaded}}</div>
     <div *ngFor="let prediction of image.predictions">
     	<li>{{prediction.model_version}}</li>
     </div>
+    <button type="button" class="btn btn-danger" (click)="delete(image._id)">Delete</button>
   </div>
 </div>
